--- a/src/App.css
+++ b/src/App.css
@@ -205,7 +205,7 @@
 
 .firstName, .secondName {
   font-weight: bold;
-  font-size: 90px;
+  font-size: 100px;
   font-family: 'Rubik', sans-serif;
   animation-name: name-animation;
   animation-duration: 2s;
@@ -773,7 +773,7 @@ button {
 
 .card {
   width: 200px;
-  margin: 25px;
+
 }
 
 .card .icon {
@@ -882,18 +882,22 @@ button {
 
 @media screen and (max-width: 768px) {
   .header {
-    flex-direction: column;
     padding: 10px 20px;
+  }
+  .header button{
+    padding: 10px 15px;
+    margin-right: 10px;
   }
 
   .logo-link img {
-    max-height: 50px; /* Smaller logo */
+    max-height: 50px;
   }
 
   .nav {
     flex-direction: column;
     align-items: center;
     gap: 10px; /* Smaller gap between links */
+    display: none;
   }
 
   .nav .link {
