--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
 /* src/index.css */
+@font-face {
+  font-family: 'DG-Ghayaty';
+  src: url('./fonts/DG-Ghayaty.ttf') format('truetype');
+}
+
 body, html {
   margin: 0;
   width: 100%;
   height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'CustomFont', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
