--- a/src/App.css
+++ b/src/App.css
@@ -1,240 +1,233 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 50px;
-    background: #ffffff;
-    box-shadow: 0 2px 4px rgba(248, 99, 0, 0.1);
-    border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 50px;
+  background: #ffffff;
+  box-shadow: 0 2px 4px rgba(248, 99, 0, 0.1);
+  border-radius: 20px;
 }
 ::-webkit-scrollbar {
-  display: none;
+display: none;
 }
 
 .logo-link img {
-    max-height: 70px;
+  max-height: 70px;
 }
 
 .logo-link img:hover {
-    -webkit-animation-name: wobble-to-top-right;
-    animation-name: wobble-to-top-right;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-timing-function: ease-in-out;
-    animation-timing-function: ease-in-out;
-    -webkit-animation-iteration-count: 1;
-    animation-iteration-count: 1;
+  -webkit-animation-name: wobble-to-top-right;
+  animation-name: wobble-to-top-right;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
 }
 
 @-webkit-keyframes wobble-to-top-right {
-	16.65% {
-		-ms-transform: translate(8px, -8px);
-		-webkit-transform: translate(8px, -8px);
-    	transform: translate(8px, -8px);
-	}
-	33.3% {
-	    -ms-transform: translate(-6px, 6px);
-	    -webkit-transform: translate(-6px, 6px);
-	    transform: translate(-6px, 6px);
-  	}
-	49.95% {
-	    -ms-transform: translate(4px, -4px);
-	    -webkit-transform: translate(4px, -4px);
-	    transform: translate(4px, -4px);
-  	}
-  	66.6% {
-	    -ms-transform: translate(-2px, 2px);
-	    -webkit-transform: translate(-2px, 2px);
-	    transform: translate(-2px, 2px);
-  	}
-	83.25% {
-    	-ms-transform: translate(1px, -1px);
-    	-webkit-transform: translate(1px, -1px);
-		transform: translate(1px, -1px);
-	}
-	100% {
-		-ms-transform: translate(0, 0);
-		-webkit-transform: translate(0, 0);
-		transform: translate(0, 0);
-	}
+16.65% {
+  -ms-transform: translate(8px, -8px);
+  -webkit-transform: translate(8px, -8px);
+    transform: translate(8px, -8px);
+}
+33.3% {
+    -ms-transform: translate(-6px, 6px);
+    -webkit-transform: translate(-6px, 6px);
+    transform: translate(-6px, 6px);
+  }
+49.95% {
+    -ms-transform: translate(4px, -4px);
+    -webkit-transform: translate(4px, -4px);
+    transform: translate(4px, -4px);
+  }
+  66.6% {
+    -ms-transform: translate(-2px, 2px);
+    -webkit-transform: translate(-2px, 2px);
+    transform: translate(-2px, 2px);
+  }
+83.25% {
+    -ms-transform: translate(1px, -1px);
+    -webkit-transform: translate(1px, -1px);
+  transform: translate(1px, -1px);
+}
+100% {
+  -ms-transform: translate(0, 0);
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
 }
 @keyframes wobble-to-top-right {
-  	16.65% {
-  	    -ms-transform: translate(8px, -8px);
-	    -webkit-transform: translate(8px, -8px);
-	    transform: translate(8px, -8px);
-  	}
-  	33.3% {
-  		-ms-transform: translate(-6px, 6px);
-	    -webkit-transform: translate(-6px, 6px);
-	    transform: translate(-6px, 6px);
-  	}
-  	49.95% {
-  		-ms-transform: translate(4px, -4px);
-	    -webkit-transform: translate(4px, -4px);
-	    transform: translate(4px, -4px);
-  	}
-  	66.6% {
-  		-ms-transform: translate(-2px, 2px);
-	    -webkit-transform: translate(-2px, 2px);
-	    transform: translate(-2px, 2px);
-  	}
-  	83.25% {
-  		-ms-transform: translate(1px, -1px);
-	    -webkit-transform: translate(1px, -1px);
-	    transform: translate(1px, -1px);
-  	}
-  	100% {
-  		-ms-transform: translate(0, 0);
-	    -webkit-transform: translate(0, 0);
-	    transform: translate(0, 0);
-  	}
+  16.65% {
+      -ms-transform: translate(8px, -8px);
+    -webkit-transform: translate(8px, -8px);
+    transform: translate(8px, -8px);
+  }
+  33.3% {
+    -ms-transform: translate(-6px, 6px);
+    -webkit-transform: translate(-6px, 6px);
+    transform: translate(-6px, 6px);
+  }
+  49.95% {
+    -ms-transform: translate(4px, -4px);
+    -webkit-transform: translate(4px, -4px);
+    transform: translate(4px, -4px);
+  }
+  66.6% {
+    -ms-transform: translate(-2px, 2px);
+    -webkit-transform: translate(-2px, 2px);
+    transform: translate(-2px, 2px);
+  }
+  83.25% {
+    -ms-transform: translate(1px, -1px);
+    -webkit-transform: translate(1px, -1px);
+    transform: translate(1px, -1px);
+  }
+  100% {
+    -ms-transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
 }
 
 .nav {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .nav .get-started {
-    background: #000ecf; /* Main color for "Get Started" button */
-    color: #ffffff; /* White text color */
-    padding: 12px 25px; /* Increased padding */
-    border-radius: 5px;
-    font-size: 18px; /* Increased font size */
+  background: #4b0038; /* Main color for "Get Started" button */
+  color: #ffffff; /* White text color */
+  padding: 12px 25px; /* Increased padding */
+  border-radius: 5px;
+  font-size: 18px; /* Increased font size */
 }
 
 .nav .link {
-    margin: 0 20px; /* Increased spacing between links */
-    color: #f00f08b7; /* Dark blue color for links */
-    text-decoration: none;
-    cursor: pointer;
-    font-family: 'Marhey', sans-serif;
-    font-size: 18px; /* Increased font size of links */
+  margin: 0 20px; /* Increased spacing between links */
+  color: #2e23ffd0; /* Dark blue color for links */
+  text-decoration: none;
+  cursor: pointer;
+  font-family: 'Marhey', sans-serif;
+  font-size: 18px; /* Increased font size of links */
 }
 
 .nav .link:hover {
-    color: #000000; /* Main color on hover */
+  color: #4b0038; /* Main color on hover */
 }
 
 .get-started-btn {
-    padding: 12px 25px; /* Increased padding */
-    background: #1900ff; /* Main color for "Get Started" button */
-    color: #ffffff; /* White text color */
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    font-family: 'Marhey', sans-serif;
+  padding: 12px 25px; /* Increased padding */
+  background: #4b0038; /* Main color for "Get Started" button */
+  color: #ffffff; /* White text color */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-family: 'Marhey', sans-serif;
 }
 
 .get-started-btn:hover {
-    background: #000000;
-    color: #ffffff;
+  background: #000000;
+  color: #ffffff;
 }
 .sidebar {
-  position: fixed;
-  right: -300px; /* Initially hidden off-screen */
-  top: 0;
-  height: 100vh;
-  width: 300px;
-  background-color: #ffffff; /* Lighter background for better contrast */
-  box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  padding-top: 60px;
-  transition: right 0.4s ease; 
-  z-index: 2000;
+position: fixed;
+right: -300px; /* Initially hidden off-screen */
+top: 0;
+height: 100vh;
+width: 300px;
+background-color: #ffffff; /* Lighter background for better contrast */
+box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: center;
+padding-top: 60px;
+transition: right 0.4s ease; 
+z-index: 2000;
 }
 
 .sidebar.active {
-  right: 0; /* Slide in the sidebar */
+right: 0; /* Slide in the sidebar */
 }
 
 .close-btn {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  font-size: 30px;
-  color: #3b5998; /* Match your theme's primary color */
-  cursor: pointer;
-  transition: color 0.3s ease;
+position: absolute;
+top: 20px;
+right: 20px;
+font-size: 30px;
+color: #3b5998; /* Match your theme's primary color */
+cursor: pointer;
+transition: color 0.3s ease;
 }
 
 .close-btn:hover {
-  color: #3b5998;
+color: #3b5998;
 }
 
 .sidebar-button {
-  background-color: #f00f08b7; /* Primary color from your theme */
-  border: none;
-  border-radius: 25px; /* Rounded button style for modern look */
-  padding: 15px 30px;
-  margin-bottom: 20px;
-  color: white;
-  font-size: 18px;
-  font-weight: 600;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-  cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.2s ease; /* Add transition for hover effects */
+background-color: #3b5998; /* Primary color from your theme */
+border: none;
+border-radius: 25px; /* Rounded button style for modern look */
+padding: 15px 30px;
+margin-bottom: 20px;
+color: white;
+font-size: 18px;
+font-weight: 600;
+letter-spacing: 0.5px;
+text-transform: uppercase;
+cursor: pointer;
+transition: background-color 0.3s ease, transform 0.2s ease; /* Add transition for hover effects */
 }
 
 .sidebar-button:hover {
-  background-color: #3b5998; /* Slightly lighter shade on hover */
-  transform: translateY(-3px); /* Subtle lift on hover */
+background-color: #3b5998; 
+transform: translateY(-3px);
 }
 
 .arrow-wrapper {
-  display: inline-block;
-  margin-left: 12px;
+display: inline-block;
+margin-left: 12px; /* Adjust margin for better spacing */
 }
 
 .arrow {
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  display: inline-block;
-  padding: 4px;
-  transform: rotate(45deg);
-}
-
-.sidebar-logo{
-  width: 240px;
-  height: 100px;
+border: solid white;
+border-width: 0 3px 3px 0;
+display: inline-block;
+padding: 4px;
+transform: rotate(45deg);
 }
 
 .sidebar hr {
-  width: 80%;
-  border: none;
-  border-top: 1px solid #eaeaea;
-  margin: 20px 0;
+width: 80%;
+border: none;
+border-top: 1px solid #eaeaea;
+margin: 20px 0;
 }
 
 .sidebar h2 {
-  color: #333;
-  font-size: 22px;
-  margin-bottom: 30px;
+color: #333;
+font-size: 22px;
+margin-bottom: 30px;
 }
 
 .menu-icon {
-  color: #3b5998;
-  font-size: 36px;
-  cursor: pointer;
+color: #3b5998;
+font-size: 36px;
+cursor: pointer;
 }
 
 @media (max-width: 768px) {
-  .nav {
-    display: none;
-  }
-
-  .sidebar {
-    width: 250px;
-  }
+.nav {
+  display: none;
 }
 
-
+.sidebar {
+  width: 250px;
+}
+}
 
 .home-content {
     position: relative;
@@ -341,12 +334,16 @@
     margin-bottom: 20px;
     font-weight: bold;
 }
+.buttons {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
 
-  /* From Uiverse.io by satyamchaudharydev */ 
 button {
-    --primary-color: #645bff;
+    --primary-color: #4b0038;
     --secondary-color: #fff;
-    --hover-color: #111;
+    --hover-color: #645bff;
     --arrow-width: 10px;
     --arrow-stroke: 2px;
     box-sizing: border-box;
@@ -359,6 +356,7 @@ button {
     transition: 0.2s background;
     align-items: center;
     gap: 0.6em;
+    margin-right: 20px;
     font-family: 'Marhey', sans-serif;
   }
   
@@ -391,19 +389,38 @@ button {
     transform: rotate(-45deg);
   }
   
-  button:hover {
-    background-color: var(--hover-color);
-  }
+
+
   
   button:hover .arrow:before {
     right: 0;
   }
 
-  .about-section{
+  @media screen and (max-width: 768px) {
+    button{
+      padding: 10px 15px;
+      font-size: 10px;
+    }
+    .buttons:last-child {
+      margin-right: 30px;
+    }
+    
+  }
+  
+
+  .cards-section{
     display: flex;
     align-self: center;
     justify-content: center;
-    height: 500px;
+    height: auto;
+    margin-top: 150px;
+  }
+  .aboutus-section{
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    height: auto;
+    margin-top: 150px;
   }
 
   .why-us-card {
@@ -1025,10 +1042,13 @@ button {
     text-align: center;
   }
 
+  .firstName, .secondName {
+    font-size: 40px; /* Smaller font size for names */
+  }
+  
 
   .separator {
     height: 2px; /* Thinner separator */
-    margin: 10px 0; /* Adjust margin */
   }
 
   .home-details p {
@@ -1044,5 +1064,42 @@ button {
     height: 35px; /* Smaller social media icons */
   }
 }
+@media (max-width: 768px) {
+  .nav {
+    display: none; /* Hide the navbar links in mobile view */
+  }
+
+  .menu-icon {
+    display: block; /* Show the menu icon in mobile view */
+  }
+}
+@media (max-width: 768px) {
+  .sidebar {
+    width: 250px; /* Adjust sidebar width for smaller screens */
+  }
+}
+
+
+
+@media (max-width: 768px) {
+  .header {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+.menu-icon{
+  z-index: 1000;
+}
+
+  .logo {
+    margin-right: auto; 
+  }
+
+  .nav-buttons {
+    display: flex;
+    gap: 10px;
+  }
+}
+
 
 
